--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="https://kit.fontawesome.com/61c3e49273.js"
       crossorigin="anonymous"
     ></script>
-    <title>Google.com</title>
+    <title>Tesla</title>
     <style>
       * {
         box-sizing: border-box;
