--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       src="https://kit.fontawesome.com/61c3e49273.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?" />
     <title>Tesla</title>
     <style>
       * {
